--- a/LLMCOSPLAY(RAG+TTS).ipynb
+++ b/LLMCOSPLAY(RAG+TTS).ipynb
@@ -3781,7 +3781,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## <<步驟3>> 我們採用intfloat的中文Embedding模型跟faiss的向量檢索庫 如果對token數不滿意可以參考這個評比網站 https://ihower.tw/blog/archives/12167"
+        "## <<步驟3>> 我們採用intfloat的Embedding模型 對於多國語言來說非常適合跟faiss的向量檢索庫 如果對token數不滿意可以參考這個評比網站 https://ihower.tw/blog/archives/12167"
       ],
       "metadata": {
         "id": "BDIKSpNIwN8d"
