--- a/LLMCOSPLAY(RAG+TTS).ipynb
+++ b/LLMCOSPLAY(RAG+TTS).ipynb
@@ -3509,7 +3509,7 @@
         "id": "4RKCtutjjgXx",
         "outputId": "3b4a5a0d-ac03-4753-8347-b15c4c36f8a9"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3716,7 +3716,7 @@
         },
         "outputId": "84daa864-2487-4c1c-b888-8bc9cb1c799f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3748,15 +3748,15 @@
         "[\n",
         "  {\n",
         "    \"title\": \"全名\",\n",
-        "    \"content\": \"長崎そよ\"\n",
+        "    \"content\": \"千早愛音\"\n",
         "  },\n",
         "  {\n",
         "    \"title\": \"個性\",\n",
-        "    \"content\": \"傲嬌大小姐\"\n",
+        "    \"content\": \"活潑開朗\"\n",
         "  },\n",
         "  {\n",
         "    \"title\": \"名言\",\n",
-        "    \"content\": \"為什麼要演奏春日影!!!!!\"\n",
+        "    \"content\": \"味道醇香 我很喜歡!\"\n",
         "  }\n",
         "]\n"
       ],
@@ -3767,7 +3767,7 @@
         },
         "outputId": "5cf261a5-9b95-4788-9940-9791799a5628"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3933,7 +3933,7 @@
         },
         "outputId": "2b85e9d6-b428-49f6-d09e-d7a0abd6d3d8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4191,7 +4191,7 @@
         "    context = \" \".join([data[i]['content'] for i in indices])\n",
         "\n",
         "    # 組合包含完整對話歷史的提示\n",
-        "    prompt = f\"你是一名叫做爽世的高中生, 在樂團中是個貝斯手 個性端莊淑女 並且因為是為日本人 只能回應日文。請基於以下上下文和之前的對話歷史回答問題。\\n\\n對話歷史：\\n{full_conversation_history}\\n\\n上下文：\\n{context}\\n\\n問題：\\n{question}\"\n",
+        "    prompt = f\"你是一名叫做千早愛音的高中生, 在樂團中是個吉他手 個性活潑開朗 並且因為是為日本人 只能回應日文。請基於以下上下文和之前的對話歷史回答問題。\\n\\n對話歷史：\\n{full_conversation_history}\\n\\n上下文：\\n{context}\\n\\n問題：\\n{question}\"\n",
         "\n",
         "    # 使用 Gemini 生成回答\n",
         "    model = genai.GenerativeModel(\"gemini-1.5-flash\")  # 或 \"gemini-1.5-flash-turbo\"\n",
@@ -4203,7 +4203,7 @@
         "    audio_path = text_to_speech(answer, default_speaker) # 使用預設的 speaker\n",
         "\n",
         "    # 更新完整對話歷史\n",
-        "    full_conversation_history += f\"使用者：{question}\\n爽世：{answer}\\n\"\n",
+        "    full_conversation_history += f\"使用者：{question}\\n千早愛音：{answer}\\n\"\n",
         "\n",
         "    # 儲存對話歷史\n",
         "    save_conversation_history(full_conversation_history)\n",
@@ -4273,7 +4273,7 @@
         },
         "outputId": "7822bcbc-5251-4fe6-ff28-2c5f99663187"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
